# dvattention

./: CMakeLists.txt  README.md  pyproject.toml
python/dvattn/: attention.py
scripts/: make_instantiations.py
src/: binding.cu  dispatch.h  q_rope.h  rope.cuh
src/kernels/: kernel_v21.cuh  paged_kernel_v21.cuh  varlen_paged_kernel_v21.cuh
src/tpl/: CMakeLists.txt  kernel_v21.cu
